--- a/new.html
+++ b/new.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="Your paragraph text.png" type="image/x-icon">
 </head>
 <body>
-    <div>#navigation bar section
+    <div>
         <nav class="nav_bar">
             <ul>
                 <li><a href="#sec1">Home</a></li>
@@ -18,7 +18,7 @@
             </ul>
         </nav>
     </div>
-<div id="sec1">#flex tab section
+<div id="sec1">
       <div class="panels">
         <div class="panel panel1">
           <p>our</p>
@@ -47,7 +47,7 @@
         </div>
       </div>
 </div>
-<div id="sec2">#info section
+<div id="sec2">
     <h1 id="head">
         Augmented reality (AR)
     </h1>
@@ -59,7 +59,7 @@
     </p>
  
 </div>
-<div id="sec3">#login section
+<div id="sec3">
     <div class="cont">
 
         <div class="form-box">
